Created about page and edited home page

--- a/home.html
+++ b/home.html
@@ -70,15 +70,15 @@ html {
 <div class="row">
   <div class="col-3 menu">
     <ul>
-      <li>Home</li>
-      <li>Blog</li>
+	    <li><strong>home</strong></li>
+	    <li><a href=about.html>about</a></li>
     </ul>
   </div>
 
   <div class="col-9 body">
-    <h1>Home</h1>
+    <h1>home</h1>
     <p>Recently seen the World!</p>
-    <p>Resize the browser window to see how the content respond to the resizing.</p>
+    <p>You can learn about me and who I am by reading the <a href=about.html>about</a> page.</p>
   </div>
 </div>
 
