Made links nicer color; removed home header

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@ html {
   <div class="col-3 menu">
     <ul>
 	    <li><strong>home</strong></li>
-	    <li><a href=about.html>about</a></li>
+	    <li><a href=about.html style="color:#696969;">about</a></li>
     </ul>
   </div>
 
   <div class="col-9 body">
-    <h1>home</h1>
+    <h1></h1>
     <p>Recently seen the World!</p>
-    <p>You can learn about me and who I am by reading the <a href=about.html>about</a> page.</p>
+    <p>You can learn about me and who I am by reading the <a href=about.html style="color:#696969;">about</a> page.</p>
   </div>
 </div>
 
