--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@ html {
 <div class="row">
   <div class="col-3 menu">
     <ul>
-      <li>home</li>
-      <li>about</li>
+      <li><a href=about.html style="color:#696969;">home</a></li>
+      <li><strong>about</strong></li>
     </ul>
   </div>
 
