--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ html {
 <div class="row">
   <div class="col-3 menu">
     <ul>
-      <li><a href=about.html style="color:#696969;">home</a></li>
+      <li><a href=index.html style="color:#708090;">home</a></li>
       <li><strong>about</strong></li>
     </ul>
   </div>
