--- a/about.html
+++ b/about.html
@@ -4,10 +4,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
-  background-color: #696969;
+  background-color: #3f4b53;
   box-sizing: border-box;
 }
 
+a {
+      text-decoration:none;
+   }
 .row::after {
   content: "";
   clear: both;
@@ -34,7 +37,7 @@ html {
 }
 
 .header {
-  color: #708090;
+  color: #59c3a0;
   text-align: center;
   padding: 15px;
 }
@@ -52,13 +55,14 @@ html {
 .menu li {
   padding: 2px;
   margin-bottom: 3px;
-  color: #708090; 
+  color: #59c3a0; 
   rgba(0,0,0,0.24);
 }
 
-.menu li:hover {
-  color: #696969;
-}
+#<!--.menu li:hover {
+#  color: #696969;
+#}
+#-->
 </style>
 </head>
 <body>
@@ -70,7 +74,7 @@ html {
 <div class="row">
   <div class="col-3 menu">
     <ul>
-      <li><a href=index.html style="color:#708090;">home</a></li>
+      <li><a href=index.html style="color:#59c3a0;">home</a></li>
       <li><strong>about</strong></li>
     </ul>
   </div>
