--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
-  background-color: #696969;
+  background-color: #3f4b53;
   box-sizing: border-box;
+}
+
+a {
+      text-decoration:none;
 }
 
 .row::after {
@@ -34,7 +38,7 @@ html {
 }
 
 .header {
-  color: #708090;
+  color: #59c3a0;
   text-align: center;
   padding: 15px;
 }
@@ -52,13 +56,16 @@ html {
 .menu li {
   padding: 2px;
   margin-bottom: 3px;
-  color: #708090; 
+  color: #59c3a0; 
   rgba(0,0,0,0.24);
 }
 
-.menu li:hover {
-  color: #696969;
-}
+#<!--
+#.menu li:hover {
+#  color: #696969;
+#}
+#-->
+
 </style>
 </head>
 <body>
@@ -71,7 +78,7 @@ html {
   <div class="col-3 menu">
     <ul>
 	    <li><strong>home</strong></li>
-	    <li><a href=about.html style="color:#708090;">about</a></li>
+	    <li><a href=about.html style="color:#59c3a0;">about</a></li>
     </ul>
   </div>
 
