--- a/about.html
+++ b/about.html
@@ -2,68 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-* {
-  background-color: #3f4b53;
-  box-sizing: border-box;
-}
-
-a {
-      text-decoration:none;
-   }
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-[class*="col-"] {
-  float: right;
-  padding: 15px;
-}
-
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 100%;}
-
-html {
-  font-family: sans-serif;
-}
-
-.header {
-  color: #59c3a0;
-  text-align: center;
-  padding: 15px;
-}
-
-.body{
-  color: #708090;
- }
-
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.menu li {
-  padding: 2px;
-  margin-bottom: 3px;
-  color: #59c3a0; 
-  rgba(0,0,0,0.24);
-}
-
-#<!--.menu li:hover {
-#  color: #696969;
-#}
-#-->
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -74,15 +13,14 @@ html {
 <div class="row">
   <div class="col-3 menu">
     <ul>
-      <li><a href=index.html style="color:#59c3a0;">home</a></li>
+      <li><a href=index.html>home</a></li>
       <li><strong>about</strong></li>
     </ul>
   </div>
 
-  <div class="col-9 body">
-    <h1>about</h1>
-    <p>**I am a senior in high school.</p>
-    <p>**I enjoy learning and programming.</p>
+  <div class="body">
+    <p>I am a senior in high school.</p>
+    <p>I enjoy learning and programming.</p>
   </div>
 </div>
 
