--- a/index.html
+++ b/index.html
@@ -2,71 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-* {
-  background-color: #3f4b53;
-  box-sizing: border-box;
-}
-
-a {
-      text-decoration:none;
-}
-
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-[class*="col-"] {
-  float: right;
-  padding: 15px;
-}
-
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 100%;}
-
-html {
-  font-family: sans-serif;
-}
-
-.header {
-  color: #59c3a0;
-  text-align: center;
-  padding: 15px;
-}
-
-.body{
-  color: #708090;
- }
-
-.menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.menu li {
-  padding: 2px;
-  margin-bottom: 3px;
-  color: #59c3a0; 
-  rgba(0,0,0,0.24);
-}
-
-#<!--
-#.menu li:hover {
-#  color: #696969;
-#}
-#-->
-
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -78,14 +14,14 @@ html {
   <div class="col-3 menu">
     <ul>
 	    <li><strong>home</strong></li>
-	    <li><a href=about.html style="color:#59c3a0;">about</a></li>
+	    <li><a href=about.html>about</a></li>
     </ul>
   </div>
 
-  <div class="col-9 body">
+  <div class="body">
     <h1></h1>
     <p>Recently seen the World!</p>
-    <p>You can learn about me and who I am by reading the <a href=about.html style="color:#708090;">about</a> page.</p>
+    <p>You can learn about me and who I am by reading the about page.</p>
   </div>
 </div>
 
