--- a/index.html
+++ b/index.html
@@ -5,21 +5,8 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-<div class="header">
-  <h1>YusufH</h1>
-</div>
-
-<div class="row">
-  <div class="col-1 menu">
-	    <li><strong>home</strong></li>
-	    <li><a href=about.html>about</a></li>
-  </div>
-
-  <div class="body">
-    <p>Recently seen the World!</p>
-    <p>You can learn about me and who I am by reading the about page.</p>
-  </div>
+<div class="wrapper">
+<div class="typing-demo">My name is Yusuf(¬‿¬)</div>
 </div>
 </body>
 </html>
