Update and rename attempt to index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ img{
 </head>
 <body>
 <input class="dark-mode-checkbox" type="checkbox">
-<img src="https://lh3.googleusercontent.com/ITwjk8uCQrui0RdV_C9VhsAUKvY3jnaj8_50bLnG-2EVSOv_NQ38YKWmstCB3d_ifrc8SveYrkYTGwDjIqQtIydx2-uWZ_QP0tdvp3rw9JLOZi3AGCgkmfjDudZ6r0ftJ8hR88VYeqb9kqh_DvG74xY4NZiZV2rVZpU61QP2-QMFXzPfBC1MP5LzCylzTHNyZMQDp5C1MMso_ciLQPPMZSSua72vUDHeCPsJRWog_CJJjQ-69xnln0W7VfWJUCsxBBsTyImTLZig7c6BmTY3CuyJgpwPQML5wg4dtyfeOzVm-9M5XZpYWYKc6_WV8YYf6yJ4P_pdAYdmNHxXTU9E8Yn1Jrn801VbBsDKMpBy3PWz4Q0bu0i5rqPAFIXik0bf9fPhSjC1BTXOCdsjjQAyRTAKuIMT1WEJZFYIht_FLBtvuzlF2ICO9VccSrlvIEaRoMkIjPEE6Ib4naLM4xGvE-Z2KeyK_nJLdV77J7D55_EjyfYLQHfSussJW9UMZgxDmZT4UDcPYGbrHPX8nn6XD9b8h1PotITRxxOQkxdeFn_mUFhKuJydbHPdlW46EEOatERKpBTI6QRWRWE1k3qsn4P2Q22VVarqra2rE3gdaQxZpHgp9RQpJK7A8q5MgKaFof3idIpKF7q53wMaEU_KyRzVT083jnjZgGPMWo-rf2zzkmXzaYBWpDbIFArWIA=w704-h938-no?authuser=0" alt="Me"> 
+<img src="pic.jpg" alt="Me"> 
 <div class="wrapper">
 <div class="typing-demo">My name is Yusuf(¬‿¬)</div>
 </div>
