--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ justify-content: center;
   <input type="checkbox" id="dm" name="Dark Mode">
   <label for="dm">Dark Mode</label>
   <div>
-  <img src="https://lh3.googleusercontent.com/mFzhZcF48DWCPbXIW6DSkQjEE3yb8KarUZhpMKACd7PrewpavLsDQAbCowVSCoyldItKgRWmNFYcqZ2n92yRCaxz_HErwDx_5CO2s8AeUqccDegtFqSz3bCXLE-SnrP5dTwvI3K3oYcrjFd4XPJuUClRxE2qRdrzcfZ6E3RVF_krYri3VX0qjlkByyRigARyghMNIO9LaV0Z5-h2zOKKbMFCyQ6LW4qTA3I4fO5BLASUP7ToGvH6pExYV1L3RrmgiLHK851xxjtUGqY7GMv7YGDHgWw8ph3tVQZ97RNBEp3awQbSHEFS2VknuA-k4JXF6Ru7UOLMoY5s_C8hnizVxSox6NfdciqqcRVbs6c6TDY4xrlt6KXRFxWqIbLhmjra0F-VkmpvzERLNIcu6oTNPiQU6Qcyf5LW4gpsTnMmG6shoBTo9dPKBr-k-pqaY5f_UKRrXUr5NPH6HQi-09fC12hvJwlO_ZUMSKE5OL-adPIGvS5EAz4RjmQGJalrGvQrxCleisEM8RZpHJHqYEf5PmeTQTqlKH6MI9sak7Um6axNga12tLeVeRdJQk-3nS3J0VV6GFDr2AhWKB35yBlemwGjnzsXxWPYuJLLh_ATjiVbHypOAqKnrMwH3wa0vxytWE5gI10Q54vsQ1SedQJdj6X3oh06KAueE3pfJPKVigjPEGg1E40-wMYB_owcmg=w165-h220-no?authuser=0" alt="Me"> 
+  <img src="pic.jpg" alt="Me"> 
   </div>
   <div class="wrapper">
     <div class="typing-demo">My name is Yusuf(¬‿¬)</div>
